--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "promise": "^8.1.0",
     "spectre.css": "^0.5.9",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-router": "3.5.1",
+    "vuex": "3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
